# learning-path-genai

./: README.md  cloudbuild.yaml
.github/: CODEOWNERS
__materials__/: chapter_00.md  chapter_01.md  chapter_02.md  chapter_03.md
cloud_run/genai-api/: .dockerignore  .env.example  Dockerfile  justfile  main.py  prompts.py  pyproject.toml
cloud_run/genai-api/config/: __init__.py  settings.py
cloud_run/genai-api/instructions/: product_description.j2  product_description.txt  product_image.txt  styleco_customer_service.txt  styleco_rag_system.txt
cloud_run/genai-api/models/: gemini.py  product_description.py  product_image.py  rag.py
cloud_run/genai-api/routers/: gemini.py  hello_world.py  product_description.py  product_image.py  rag.py
cloud_run/genai-api/services/: gemini.py  product_description.py  product_image.py  rag.py
cloud_run/genai-api/utils/: token_analysis.py
data/styleco/faqs/: account.md  general.md  payments.md
data/styleco/policies/: returns.md  shipping.md  sizing.md
data/styleco/products/: classic-leather-briefcase.json  elegance-silk-blouse.json  heritage-wool-coat.json
iac/: artifactregistry.tf  backend.tf  iam.tf  locals.tf  rag.tf  run.tf  service_account.tf  storage.tf  variables.tf
iac/init/: init.sh
iac/scripts/: bootstrap_rag_corpus.py
